--- a/index.html
+++ b/index.html
@@ -52,10 +52,31 @@
                 <div class="timeline-dot">
                     <div class="timeline-date">2021</div>
                     </div>
-                 <div class="timeline-content">
-                    <h3>Highschool</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum non, ipsum, cumque distinctio voluptates consequuntur vero, incidunt in culpa aspernatur laborum enim iste nemo accusamus ratione. Aperiam quo vitae sunt!</p>
-                 </div>
+                    <div class="timeline-content">
+                        <h3>High school</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum non, ipsum, cumque distinctio voluptates consequuntur vero, incidunt in culpa aspernatur laborum enim iste nemo accusamus ratione. Aperiam quo vitae sunt!</p>
+                    </div>
+                </div>   
+            </div>
+            <div class="timeline-item ">
+                <div class="timeline-dot">
+                    <div class="timeline-date">2022</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>University</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum non, ipsum, cumque distinctio voluptates consequuntur vero, incidunt in culpa aspernatur laborum enim iste nemo accusamus ratione. Aperiam quo vitae sunt!</p>
+                    </div>
+                </div>   
+            </div>
+            <div class="timeline-item ">
+                <div class="timeline-dot">
+                    <div class="timeline-date">2023</div>
+                    </div>
+                    <div class="timeline-content">
+                        <h3>Internship</h3>
+                        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum non, ipsum, cumque distinctio voluptates consequuntur vero, incidunt in culpa aspernatur laborum enim iste nemo accusamus ratione. Aperiam quo vitae sunt!</p>
+                    </div>
+                </div>   
             </div>
         </div>
 
