--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
+            <a href="#Testimonials"> Testimonials</a>
             <a href="#contact"> Contact</a>
             
         </nav>
@@ -115,7 +116,7 @@
         </div>
     </section>
 
-    <!-- <section class="testimonials" id="testimonials">
+    <section class="testimonials" id="testimonials">
         <div class="testimonials-box">
             <h2 class="heading">Testimonials</h2>
 
@@ -124,6 +125,11 @@
                     <img src="1.jpg" alt="">
                     <h2>Marilyn</h2>
                     <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
 
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus blanditiis, debitis perferendis odio unde, deserunt molestiae explicabo eligendi quo temporibus soluta atque hic repellendus suscipit facere laborum, dignissimos animi!</p>
@@ -134,6 +140,11 @@
                     <img src="2.jpg" alt="">
                     <h2>Julia</h2>
                     <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
 
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus blanditiis, debitis perferendis odio unde, deserunt molestiae explicabo eligendi quo temporibus soluta atque hic repellendus suscipit facere laborum, dignissimos animi!</p>
@@ -144,6 +155,11 @@
                     <img src="3.jpg" alt="">
                     <h2>rebec</h2>
                     <div class="rating">
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
+                        <i class='bx bxs-star' id="star"></i>
 
                     </div>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus blanditiis, debitis perferendis odio unde, deserunt molestiae explicabo eligendi quo temporibus soluta atque hic repellendus suscipit facere laborum, dignissimos animi!</p>
@@ -152,7 +168,7 @@
             </div>
         </div>
 
-    </section>     -->
+    </section>    
 
     <section class="contact"id="contact">
         <h2 class="heading">Contact <span>Me</span></h2>
