--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="home-content">
             <h1>Hi, It's <span>Abhishek</span></h1>
             <h3 class="text-animation"> I'm a <span></span></h3>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nobis voluptatibus culpa ipsa minus dignissimos fugit rerum corrupti error exercitationem enim. Quas provident voluptatum consequuntur laborum quis sapiente id, necessitatibus excepturi!</p>
+            <p>I' m a full stack developer. I interested in new technology</p>
 
             <div class="social-icon">
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
