--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="#home" class="active">Home</a>
             <a href="#education">Education</a>
             <a href="#services">Services</a>
-            <a href="#Testimonials"> Testimonials</a>
+            <a href="#testimonials"> Testimonials</a>
             <a href="#contact"> Contact</a>
             
         </nav>
@@ -27,7 +27,7 @@
         <div class="home-content">
             <h1>Hi, It's <span>Abhishek</span></h1>
             <h3 class="text-animation"> I'm a <span></span></h3>
-            <p>I' m a full stack developer. I interested in new technology</p>
+            <p>Experienced frontend developer with making visually and user friendly website!</p>
 
             <div class="social-icon">
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
@@ -64,7 +64,7 @@
                 <div class="timeline-date">2022</div>
                 <div class="timeline-content">
                     <h3>University</h3>
-                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Nostrum non, ipsum, cumque distinctio voluptates consequuntur vero, incidunt in culpa aspernatur laborum enim iste nemo accusamus ratione. Aperiam quo vitae sunt!</p>
+                    <p>Ajay Kumar Garg Engineering College, Ghaziabad!</p>
                 </div>
             </div>
            
@@ -123,7 +123,7 @@
             <div class="wrapper">
                 <div class="testimonial-item">
                     <img src="1.jpg" alt="">
-                    <h2>Marilyn</h2>
+                    <h2>Warren Buffet</h2>
                     <div class="rating">
                         <i class='bx bxs-star' id="star"></i>
                         <i class='bx bxs-star' id="star"></i>
@@ -132,13 +132,13 @@
                         <i class='bx bxs-star' id="star"></i>
 
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus blanditiis, debitis perferendis odio unde, deserunt molestiae explicabo eligendi quo temporibus soluta atque hic repellendus suscipit facere laborum, dignissimos animi!</p>
+                    <p>"Market fluctuations are your friend, not enemy!"</p>
 
                 </div>
 
                 <div class="testimonial-item">
                     <img src="2.jpg" alt="">
-                    <h2>Julia</h2>
+                    <h2>Ratan Tata</h2>
                     <div class="rating">
                         <i class='bx bxs-star' id="star"></i>
                         <i class='bx bxs-star' id="star"></i>
@@ -147,13 +147,13 @@
                         <i class='bx bxs-star' id="star"></i>
 
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus blanditiis, debitis perferendis odio unde, deserunt molestiae explicabo eligendi quo temporibus soluta atque hic repellendus suscipit facere laborum, dignissimos animi!</p>
+                    <p>"Ups and Downs in life are very important to keep us going, because a straight line even in an E.C.G. means we are not live!"</p>
 
                 </div>
 
                 <div class="testimonial-item">
                     <img src="3.jpg" alt="">
-                    <h2>rebec</h2>
+                    <h2>Jamsetji Tata</h2>
                     <div class="rating">
                         <i class='bx bxs-star' id="star"></i>
                         <i class='bx bxs-star' id="star"></i>
@@ -162,7 +162,7 @@
                         <i class='bx bxs-star' id="star"></i>
 
                     </div>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem minus blanditiis, debitis perferendis odio unde, deserunt molestiae explicabo eligendi quo temporibus soluta atque hic repellendus suscipit facere laborum, dignissimos animi!</p>
+                    <p>"always aim at perfection in whatever you do. There's always something that could be done better!"</p>
 
                 </div>
             </div>
@@ -171,7 +171,7 @@
     </section>    
 
     <section class="contact"id="contact">
-        <h2 class="heading">Contact <span>Me</span></h2>
+        <h2 class="heading">Contact <span>me</span></h2>
 
         <form action="">
             <div class="input-group">
