--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             </div>      
         </div>
         <div class="home-img">
-            <img src="my image linkedin.png" alt="">
+            <img src="my image.png" alt="">
         </div>
     </section>
     <section class="education" id="education">
