--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
             <p>I'm a Web Designer. Expertise is to create and Website Design, Frontend Design, and many more.... </p>
 
             <div class="social-icon">
-                <a href="#"><i class='bx bxl-linkedin'></i></a>
-                <a href="#"><i class='bx bxl-github' ></i></a>
-                <a href="#"><i class='bx bxl-twitter' ></i></a>
+                <a href="https://www.linkedin.com/in/abhishekkumar9988/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/abhishekkumar9988"><i class='bx bxl-github' ></i></a>
+                <a href="https://x.com/avi9888"><i class='bx bxl-twitter' ></i></a>
                 
             </div>
 
@@ -181,9 +181,9 @@
     
     <footer class="footer">
         <div class="social">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github' ></i></a>
-            <a href="#"><i class='bx bxl-twitter' ></i></a>
+            <a href="https://www.linkedin.com/in/abhishekkumar9988/"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/abhishekkumar9988"><i class='bx bxl-github' ></i></a>
+            <a href="https://x.com/avi9888"><i class='bx bxl-twitter' ></i></a>
         </div>
 
         <ul class="list">
